Added IP location info

--- a/crm/templates/crm/searchquery_list.html
+++ b/crm/templates/crm/searchquery_list.html
@@ -33,6 +33,8 @@
                             {% endif %}
                         {% endif %}
                         <span>{% if suery.user %}{{ suery.user }}{% else %}[{% trans 'Anonymous' %}]{% endif %}</span>
+                        {% if suery.ip_country %}<span class="mx-2"> - {{ suery.ip_country }}</span>{% endif %}
+                        {% if suery.ip_city %}<span class="mx-2"> - {{ suery.ip_city }}</span>{% endif %}
                         <span class="mx-2"> - {{ suery.date_submitted }}</span>
                     </div>
                 </a>
