--- a/crm/templates/crm/downloads_list.html
+++ b/crm/templates/crm/downloads_list.html
@@ -9,30 +9,91 @@
     <h1 class="text-center mb-4">{% trans "DCE Downloads" %}</h1>
 
     {% if request.user|in_group:'CRM' %}
-    <h3 class="my-3 fw-light mt-5">{% trans 'Total count' %}</h3>
-    {% include 'crm/includes/counter.html' with total_count=total_count %}
+        {% include 'crm/includes/counter.html' with total_count=total_count %}
+        <div class="text-center"><strong>{{ total_download_size|filesizeformat }}</strong><span class="text-muted"> = {{ total_download_size }} {% trans 'bytes' %}</span></div>
 
-    <h3 class="my-3 fw-light mt-5">{% trans 'Total downloaded size' %}</h3>
-    <div class="text-center"><strong>{{ total_download_size|filesizeformat }}</strong><span class="text-muted"> = {{ total_download_size }} {% trans 'bytes' %}</span></div>
 
-    <h3 class="my-3 fw-light mt-5">{% trans 'Top last' %} {{ last_days }} {% trans 'days' %}</h3>
-    <div class="list-group">
-        {% for download in top_downloads %}
-            {% with con=cons_dict|gettify:download.consultation %}
-                <a href="{% url 'portal_con_details' con.id %}" class="text-decoration-none">
-                    <li class="list-group-item d-flex justify-content-between align-items-start">
-                        <div class="me-auto">
-                            <div class="oneline" data-bs-toggle="tooltip" title="{{ con.objet }}"><strong>{{ forloop.counter }}</strong>. {{ con.objet|upper }}</div>
-                            <span class="oneline text-muted">{% trans 'Latest' %}: {{ download.last_download_date }}</span>
-                        </div>
-                        <span class="badge bg-primary text-white rounded-pill">{{ download.download_count }}</span>
-                    </li>
-                </a>
-            {% endwith %}
-        {% empty %}
-            <p class="text-center">{% trans "No records found." %}</p>
-        {% endfor %}
-    </div>
+    	<hr>
+        <form class="row g-3" method="GET" action="{% url 'crm_downloads' %}">
+
+            <div class="col-auto">
+                <div class="input-group mt-2">
+                    <label class="input-group-text small text-muted" for="user_filter">User</label>
+                    <select class="form-select" id="user_filter" name="user">
+                        <option value="">-- Select User --</option> {# Option to clear user filter #}
+                        {% for user_obj in unique_users %}
+                            <option value="{{ user_obj.id }}" {% if request.GET.user|add:"0" == user_obj.id|add:"0" %}selected{% endif %}>
+                                {{ user_obj.username }}
+                            </option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
+
+            <div class="col-auto">
+                <div class="text-end py-2">
+                    <button class="btn btn-primary px-3" type="submit">Filter items</button>
+                    {% if request.GET %}
+                        <a class="btn btn-outline-secondary px-3" href="{% url 'crm_downloads' %}">Clear Filters</a>
+                    {% endif %}
+                </div>
+            </div>
+        </form>
+
+
+        <h3 class="my-3 fw-light mt-5">{% trans 'Top last' %} {{ last_days }} {% trans 'days' %}</h3>
+        <div class="list-group">
+
+            {% for download in dce_downloads %}
+
+                    <a href="{% url 'portal_con_portal_details' download.consultation %}" class="text-decoration-none">
+                        <li class="list-group-item d-flex justify-content-between align-items-start">
+                            <div class="me-auto">
+                                <div class="oneline" data-bs-toggle="tooltip" title="{{ con.objet }}"><strong>{{ download.file_name }}</strong></div>
+                                <span class="oneline text-muted">{% trans 'Started' %}: {{ download.date_started }}{% if download.user %} -{{ download.user }}{% endif %}</span>
+                                
+                            </div>
+                            <span class="badge bg-primary text-white rounded-pill">{{ download.file_size|filesizeformat }}</span>
+                        </li>
+                    </a>
+            {% empty %}
+                <p class="text-center">{% trans "No records found." %}</p>
+            {% endfor %}
+        </div>
+
+        {% if is_paginated %}
+            <nav class="mt-4" aria-label="{% trans 'Page navigation' %}">
+                <ul class="pagination justify-content-center">
+                    {% if page_obj.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page=1" aria-label="{% trans 'First' %}">{% trans 'First' %}
+                                <!-- <span aria-hidden="true">&#8676;</span> -->
+                            </a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.previous_page_number }}" aria-label="{% trans 'Previous' %}">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                    {% endif %}
+
+                    <li class="page-item active"><span class="page-link">{% trans 'Page' %} {{ page_obj.number }} / {{ page_obj.paginator.num_pages }}</span></li>
+
+                    {% if page_obj.has_next %}
+                        <li class="page-item">
+                            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.next_page_number }}" aria-label="{% trans 'Next' %}">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.paginator.num_pages }}" aria-label="{% trans 'Last' %}">{% trans 'Last' %}
+                                <!-- <span aria-hidden="true">&#8677;</span> -->
+                            </a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </nav>
+        {% endif %}
     {% else %}
         <p class="text-danger">{% trans 'Not allowed' %}</p>
     {% endif %}
