--- a/crm/templates/crm/searchquery_list.html
+++ b/crm/templates/crm/searchquery_list.html
@@ -108,12 +108,12 @@
                 <ul class="pagination justify-content-center">
                     {% if page_obj.has_previous %}
                         <li class="page-item">
-                            <a class="page-link" href="?page=1" aria-label="{% trans 'First' %}">{% trans 'First' %}
+                            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page=1" aria-label="{% trans 'First' %}">{% trans 'First' %}
                                 <!-- <span aria-hidden="true">&#8676;</span> -->
                             </a>
                         </li>
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="{% trans 'Previous' %}">
+                            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.previous_page_number }}" aria-label="{% trans 'Previous' %}">
                                 <span aria-hidden="true">&laquo;</span>
                             </a>
                         </li>
@@ -123,12 +123,12 @@
 
                     {% if page_obj.has_next %}
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="{% trans 'Next' %}">
+                            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.next_page_number }}" aria-label="{% trans 'Next' %}">
                                 <span aria-hidden="true">&raquo;</span>
                             </a>
                         </li>
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="{% trans 'Last' %}">{% trans 'Last' %}
+                            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.paginator.num_pages }}" aria-label="{% trans 'Last' %}">{% trans 'Last' %}
                                 <!-- <span aria-hidden="true">&#8677;</span> -->
                             </a>
                         </li>
