--- a/crm/templates/crm/searchquery_list.html
+++ b/crm/templates/crm/searchquery_list.html
@@ -10,7 +10,6 @@
 
     {% if request.user|in_group:'CRM' %}
 
-
         {% include 'crm/includes/counter.html' with total_count=total_count %}
 
     	<hr>
@@ -60,7 +59,7 @@
             <div class="col-auto">
                 <div class="text-end py-2">
                     <button class="btn btn-primary px-3" type="submit">Filter items</button>
-                    {% if request.GET %}
+                    {% if filtered %}
                         <a class="btn btn-outline-secondary px-3" href="{% url 'search_queries_list' %}">Clear Filters</a>
                     {% endif %}
                 </div>
@@ -102,39 +101,8 @@
         </div>
 
 
-
         {% if is_paginated %}
-            <nav class="mt-4" aria-label="{% trans 'Page navigation' %}">
-                <ul class="pagination justify-content-center">
-                    {% if page_obj.has_previous %}
-                        <li class="page-item">
-                            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page=1" aria-label="{% trans 'First' %}">{% trans 'First' %}
-                                <!-- <span aria-hidden="true">&#8676;</span> -->
-                            </a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.previous_page_number }}" aria-label="{% trans 'Previous' %}">
-                                <span aria-hidden="true">&laquo;</span>
-                            </a>
-                        </li>
-                    {% endif %}
-
-                    <li class="page-item active"><span class="page-link">{% trans 'Page' %} {{ page_obj.number }} / {{ page_obj.paginator.num_pages }}</span></li>
-
-                    {% if page_obj.has_next %}
-                        <li class="page-item">
-                            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.next_page_number }}" aria-label="{% trans 'Next' %}">
-                                <span aria-hidden="true">&raquo;</span>
-                            </a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.paginator.num_pages }}" aria-label="{% trans 'Last' %}">{% trans 'Last' %}
-                                <!-- <span aria-hidden="true">&#8677;</span> -->
-                            </a>
-                        </li>
-                    {% endif %}
-                </ul>
-            </nav>
+            {% include 'crm/includes/paginator.html' %}
         {% endif %}
 
         {% else %}
