--- a/crm/templates/crm/searchquery_list.html
+++ b/crm/templates/crm/searchquery_list.html
@@ -100,7 +100,7 @@
                         </div>
                         <span class="badge bg-primary">{{ suery.results_count }}</span>
                     </div>
-                    <div class="oneline text-muted">
+                    <div class="threeline text-muted">
                         {% if suery.user %}
                             {% if suery.user.profile.avatar %}
                                 <img class="img-fluid border rounded-circle mx-1" src="{{ MEDIA_URL }}{{ suery.user.profile.avatar }}" alt="X" style="width: 1.5rem; height: 1.5rem; object-fit: cover;">
