--- a/crm/templates/crm/searchquery_list.html
+++ b/crm/templates/crm/searchquery_list.html
@@ -94,7 +94,12 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="d-flex justify-content-start align-items-center">                            
                             {% if suery.query_language %}
-                                    <img class="img-fluid mx-1" src="{% static 'flags/' %}{{ suery.query_language }}.svg" alt="{{ suery.query_language }}" style="height: 1rem; object-fit: cover;">
+                                    <img 
+                                    	class="img-fluid border rounded-circle mx-1" 
+                                    	src="{% static 'flags/' %}{{ suery.query_language }}.svg" 
+                                    	alt="{{ suery.query_language }}" 
+                                    	style="height: 1rem; width: 1rem; object-fit: cover;"
+                                    >
                             {% endif %}
                             <strong class="twolines">{{ suery }}</strong>
                         </div>
@@ -109,8 +114,11 @@
                             {% endif %}
                         {% endif %}
                         <span>{% if suery.user %}{{ suery.user }}{% else %}[{% trans 'Anonymous' %}]{% endif %}</span>
-                        {% if suery.ip_country %}<span class="mx-2"> -{{ suery.ip_country }}</span>{% endif %}
-                        {% if suery.ip_city %}<span class="mx-2"> -{{ suery.ip_city }}</span>{% endif %}
+                        {% if suery.ip_cc_iso %}
+                            <img class="img-fluid ms-2" src="{% static 'iso-flags/' %}{{ suery.ip_cc_iso|lower }}.png" alt="{{ suery.ip_country }}" style="height: 1rem; object-fit: cover;">
+                        {% endif %}
+                        {% if suery.ip_country %}<span class="ms-1">{{ suery.ip_country }}</span>{% endif %}
+                        {% if suery.ip_city %}<span class="ms-1">/ {{ suery.ip_city }}</span>{% endif %}
                         <span class="mx-2"> -{{ suery.date_submitted }}</span>
                     </div>
                 </a>
