--- a/portal/templates/portal/includes/cons-legend.html
+++ b/portal/templates/portal/includes/cons-legend.html
@@ -34,7 +34,28 @@
                             <img class="d-inline" height="14" src="/static/img/cancelled.svg">
                             {% translate 'Consultation annulée' %}
                         </div>
-            
+
+                        <div class="mt-2">
+                            <img class="d-inline" height="14" src="/static/img/qua.svg">
+                            {% translate 'Qualification ou Classe requise pour soumissionner' %}
+                        </div>
+                        <div class="">
+                            <img class="d-inline" height="14" src="/static/img/agr.svg">
+                            {% translate 'Agrément requis pour soumissionner' %}
+                        </div>
+                        <div class="">
+                            <img class="d-inline" height="14" src="/static/img/ech.svg">
+                            {% translate "Présentation d'Echantillons requise" %}
+                        </div>
+                        <div class="">
+                            <img class="d-inline" height="14" src="/static/img/reu.svg">
+                            {% translate "Réunion programmée avec le maitre d'ouvrage" %}
+                        </div>
+                        <div class="">
+                            <img class="d-inline" height="14" src="/static/img/vis.svg">
+                            {% translate 'Visite des lieux programmée' %}
+                        </div>
+
                         <div class="mt-2">
                             <img class="d-inline" height="14" src="/static/img/proc/speaker.svg">
                             {% translate 'Procédure de consultation ouverte' %}
