--- a/portal/templates/portal/includes/con.html
+++ b/portal/templates/portal/includes/con.html
@@ -33,14 +33,13 @@
             <div id="title-details" class="text-start px-2">
 
                 <div class="twolines {% now 'YmdHis' as wassa %}{% if con.date_limite_depot|date:'YmdHis' < wassa %}text-decoration-line-through{% endif %}" data-bs-toggle="tooltip" title="{{ con.objet }}" style="text-align: start;">
-                    {% if con.cancelled %}<span class="mb-1 fw-bold text-decoration-none"><img src="{% static 'img/cancelled.svg' %}" class="pb-1 mx-1" alt="{% translate 'Cancelled' %}">{% translate 'Cancelled' %}</span>{% endif %}
-                    {% if faved %}<span class="mb-1"><img src="{% static 'img/star-fill.svg' %}" class="pb-1 mx-1" alt="Fav"></span>{% endif %}
                     {{ con.objet }}
                 </div>
 
                 <div class="small text-muted oneline fw-light">
 
-                    <div class="d-inline">
+                    <div class="d-inline">{% if con.cancelled %}<img class="d-inline" height="14" src="{% static 'img/cancelled.svg' %}" alt="Cnacelled">{% endif %}
+                        {% if faved %}<img class="d-inline" height="14" src="{% static 'img/star-fill.svg' %}" alt="Fav">{% endif %}
                         {% if con.lot_set.first.qualifications.all %}<img class="d-inline" height="14" src="/static/img/qua.svg" alt="Qua">{% endif %}
                         {% if con.lot_set.first.agrements.all %}<img class="d-inline" height="14" src="/static/img/agr.svg" alt="Agr">{% endif %}
 	                    {% if con.lot_set.first.echantillons %}<img class="d-inline" height="14" src="/static/img/ech.svg" alt="Ech">{% endif %}
