--- a/portal/templates/portal/bdc-landing.html
+++ b/portal/templates/portal/bdc-landing.html
@@ -5,7 +5,6 @@
 {% block title %}{% translate 'Purchase Orders' %}{% endblock title %}
 
 {% block content %}
-
     {% trans "Purchase Orders" as subtitle %}
     {% include 'base/includes/page-top.html' with image='img/list.webp' %}
 
@@ -18,9 +17,10 @@
             </a>
         <a id="bdc-button" type="button" class="btn btn-primary mt-1 px-2" href="https://www.marchespublics.gov.ma/bdc/entreprise/consultation/" target="_blank">
             <div class="d-flex justify-content-center">
-                <div class="mx-1"><i class="bi bi-box-arrow-up-right"></i> {% translate 'Browse POs on Official Website' %} </div>
+                <div class="mx-1"><i class="bi bi-box-arrow-up-right"></i> {% translate 'Official Website' %} </div>
             </div>
         </a>
     </div>
+    
 
 {% endblock %}
