--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -6,25 +6,31 @@
 {% get_current_language as LANGUAGE_CODE %}
 
 
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="icon" type="image/png" href="{% static 'img/insi-square.svg' %}">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/png" href="{% static 'img/insi-square.svg' %}">
 
-            <meta name="description" content="{% translate 'eMarches portal. Morocco Public Procurement Market. Access to public Tenders and Puchase orders. Paperless dematerialized procedure' %}">
-            <meta name="keywords" content="{% translate 'PMMP Morocco Public Procurement Market Purchase Order Tenders Offers Free Listing Files Download' %}">
+{% if con %}
+    <meta name="description" content="{{ con.objet }}">
+    <meta name="keywords" content="{{ con.acheteur_public }} {{ con.lieu_execution }} {{ con.objet }}">
+{% else %}
+    <meta name="description" content="{% translate 'eMarches portal. Morocco Public Procurement Market. Access to public Tenders and Puchase orders. Paperless dematerialized procedure' %}">
+    <meta name="keywords" content="{% translate 'PMMP Morocco Public Procurement Market Purchase Order Tenders Offers Free Listing Files Download' %}">
+{% endif %}
 
-            <meta name="author" content="eMarches.com">
-            <link rel="stylesheet" href="{% static 'bcons/bootstrap-icons.css' %}">
-            {% if LB %}
-                <link rel="stylesheet" href="{% static 'css/bootstrap.rtl.min.css' %}">
-            {% else %}
-                <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-            {% endif %}
+<meta name="author" content="eMarches.com">
 
-            {% for lang_code, lang_name in LANGUAGES %}
-            <link rel="alternate" hreflang="{{ lang_code }}" href="{{ request.get_host }}/{{ lang_code }}/" />
-            {% endfor %}
-            <link rel="alternate" hreflang="x-default" href="{{ request.get_host }}/en/" />
+<link rel="stylesheet" href="{% static 'bcons/bootstrap-icons.css' %}">
+{% if LB %}
+    <link rel="stylesheet" href="{% static 'css/bootstrap.rtl.min.css' %}">
+{% else %}
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+{% endif %}
+
+{% for lang_code, lang_name in LANGUAGES %}
+<link rel="alternate" hreflang="{{ lang_code }}" href="{{ request.get_host }}/{{ lang_code }}/" />
+{% endfor %}
+<link rel="alternate" hreflang="x-default" href="{{ request.get_host }}/en/" />
 
 
-            <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+<link rel="stylesheet" href="{% static 'css/custom.css' %}">
